--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,57 @@
 <html>
 <head>
   <title>RecipeBox</title>
+
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+	<% if user_signed_in? %>
+
+		<nav class="navbar navbar-default">
+	        <div class="container-fluid">
+	            <div class="navbar-header">
+	                <%= link_to "Recipes", recipes_path, class: "navbar-brand"%>
+	            </div>
+	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav navbar-left">
+	                    <!-- Future links-->
+	                </ul>
+	                <ul class="nav navbar-nav navbar-right">
+	                    <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+	                    <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+	                </ul>
+	            </div>
+	        </div>
+	</nav>
+
+    <% else %>
+
+	<nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    <!-- Future links-->
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><%= link_to "Login", new_user_session_path %></li>
+                    <li><%= link_to "Sign Up", new_user_registration_path %></li>
+                </ul>
+            </div>
+        </div>
+	</nav>
+    
+    <% end %>
+
+
+
+ 	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
 <%= yield %>
 
