--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header"><h1>Tech Talent Recipes <small>A Totally Original Idea</small></h1></div>
 
-<h1>Listing Recipes</h1>
+<% if user_signed_in? %>
+
+<h1>My Recipes</h1>
 
 <table class="table table-striped">
   <thead>
@@ -18,7 +20,7 @@
   </thead>
 
   <tbody>
-    <% @recipes.each do |recipe| %>
+    <% current_user.recipes.each do |recipe| %>
       <tr>
         <td><%= link_to recipe.name, recipe %></td>
         <td><%= recipe.category %></td>
@@ -38,3 +40,38 @@
 <br>
 
 <%= link_to 'New Recipe', new_recipe_path %>
+
+
+
+<div class="row">
+	<% current_user.recipes.each do |recipe| %>
+	<div class="col-md-8">
+		<div class="panel panel-defualt">
+			<div class="panel-body">
+				<p><%= link_to recipe.name, recipe %></p>
+			</div>
+		</div>
+	</div>
+	<% end %>
+</div>
+
+
+
+
+<% else %>
+	<div class="container">
+
+		<div class="col-md-6">
+
+		<%= render 'sign_in' %>
+
+		
+		<div class="col-md-6">
+		
+		<%= render 'sign_up' %>
+
+		</div>
+
+	</div>
+
+<% end %>
